initial code commit

--- a/Music_Recommendation.ipynb
+++ b/Music_Recommendation.ipynb
@@ -1,21 +1,10 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "cV6AsvoRfPhh"
+      },
       "source": [
         "# **Introduction:**\n",
         "\n",
@@ -58,17 +47,101 @@
         "\n",
         "1. Data Collection and Cleaning: \n",
         "\n"
-      ],
-      "metadata": {
-        "id": "cV6AsvoRfPhh"
-      }
+      ]
     },
     {
+      "attachments": {},
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "2CXx7-vXfq_h"
-      }
+      },
+      "source": [
+        "## Imports"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 5,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "import pandas as pd\n",
+        "import numpy as np\n",
+        "import json\n",
+        "import re \n",
+        "import sys\n",
+        "import itertools\n",
+        "\n",
+        "from sklearn.feature_extraction.text import TfidfVectorizer\n",
+        "from sklearn.metrics.pairwise import cosine_similarity\n",
+        "from sklearn.preprocessing import MinMaxScaler\n",
+        "import matplotlib.pyplot as plt\n",
+        "\n",
+        "\n",
+        "import spotipy\n",
+        "from spotipy.oauth2 import SpotifyClientCredentials\n",
+        "from spotipy.oauth2 import SpotifyOAuth\n",
+        "import spotipy.util as util\n",
+        "\n",
+        "import warnings\n",
+        "warnings.filterwarnings(\"ignore\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 6,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "%matplotlib inline"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 7,
+      "metadata": {},
+      "outputs": [
+        {
+          "data": {
+            "text/html": [
+              "<style>.container { width:90% !important; }</style>"
+            ],
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
+      "source": [
+        "#Makes using jupyter notebook on laptops much easier\n",
+        "from IPython.core.display import display, HTML\n",
+        "display(HTML(\"<style>.container { width:90% !important; }</style>\"))"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "codemirror_mode": {
+        "name": "ipython",
+        "version": 3
+      },
+      "file_extension": ".py",
+      "mimetype": "text/x-python",
+      "name": "python",
+      "nbconvert_exporter": "python",
+      "pygments_lexer": "ipython3",
+      "version": "3.11.3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
