code and datset updates

--- a/Music_Recommendation.ipynb
+++ b/Music_Recommendation.ipynb
@@ -131,16 +131,16 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 11,
       "metadata": {},
       "outputs": [],
       "source": [
-        "spotify_df = pd.read_csv('genres_v2.csv')"
+        "spotify_df = pd.read_csv('data.csv')"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 10,
+      "execution_count": 12,
       "metadata": {},
       "outputs": [
         {
@@ -164,212 +164,180 @@
               "  <thead>\n",
               "    <tr style=\"text-align: right;\">\n",
               "      <th></th>\n",
+              "      <th>acousticness</th>\n",
+              "      <th>artists</th>\n",
               "      <th>danceability</th>\n",
+              "      <th>duration_ms</th>\n",
               "      <th>energy</th>\n",
+              "      <th>explicit</th>\n",
+              "      <th>id</th>\n",
+              "      <th>instrumentalness</th>\n",
               "      <th>key</th>\n",
+              "      <th>liveness</th>\n",
               "      <th>loudness</th>\n",
               "      <th>mode</th>\n",
+              "      <th>name</th>\n",
+              "      <th>popularity</th>\n",
+              "      <th>release_date</th>\n",
               "      <th>speechiness</th>\n",
-              "      <th>acousticness</th>\n",
-              "      <th>instrumentalness</th>\n",
-              "      <th>liveness</th>\n",
-              "      <th>valence</th>\n",
               "      <th>tempo</th>\n",
-              "      <th>type</th>\n",
-              "      <th>id</th>\n",
-              "      <th>uri</th>\n",
-              "      <th>track_href</th>\n",
-              "      <th>analysis_url</th>\n",
-              "      <th>duration_ms</th>\n",
-              "      <th>time_signature</th>\n",
-              "      <th>genre</th>\n",
-              "      <th>song_name</th>\n",
-              "      <th>Unnamed: 0</th>\n",
-              "      <th>title</th>\n",
+              "      <th>valence</th>\n",
+              "      <th>year</th>\n",
               "    </tr>\n",
               "  </thead>\n",
               "  <tbody>\n",
               "    <tr>\n",
               "      <th>0</th>\n",
-              "      <td>0.831</td>\n",
-              "      <td>0.814</td>\n",
-              "      <td>2</td>\n",
-              "      <td>-7.364</td>\n",
+              "      <td>0.995</td>\n",
+              "      <td>['Carl Woitschach']</td>\n",
+              "      <td>0.708</td>\n",
+              "      <td>158648</td>\n",
+              "      <td>0.1950</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6KbQ3uYMLKb5jDxLF7wYDD</td>\n",
+              "      <td>0.563</td>\n",
+              "      <td>10</td>\n",
+              "      <td>0.1510</td>\n",
+              "      <td>-12.428</td>\n",
               "      <td>1</td>\n",
-              "      <td>0.4200</td>\n",
-              "      <td>0.0598</td>\n",
-              "      <td>0.013400</td>\n",
-              "      <td>0.0556</td>\n",
-              "      <td>0.3890</td>\n",
-              "      <td>156.985</td>\n",
-              "      <td>audio_features</td>\n",
-              "      <td>2Vc6NJ9PW9gD9q343XFRKx</td>\n",
-              "      <td>spotify:track:2Vc6NJ9PW9gD9q343XFRKx</td>\n",
-              "      <td>https://api.spotify.com/v1/tracks/2Vc6NJ9PW9gD...</td>\n",
-              "      <td>https://api.spotify.com/v1/audio-analysis/2Vc6...</td>\n",
-              "      <td>124539</td>\n",
-              "      <td>4</td>\n",
-              "      <td>Dark Trap</td>\n",
-              "      <td>Mercury: Retrograde</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>Singende Bataillone 1. Teil</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1928</td>\n",
+              "      <td>0.0506</td>\n",
+              "      <td>118.469</td>\n",
+              "      <td>0.7790</td>\n",
+              "      <td>1928</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>1</th>\n",
-              "      <td>0.719</td>\n",
-              "      <td>0.493</td>\n",
+              "      <td>0.994</td>\n",
+              "      <td>['Robert Schumann', 'Vladimir Horowitz']</td>\n",
+              "      <td>0.379</td>\n",
+              "      <td>282133</td>\n",
+              "      <td>0.0135</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6KuQTIu1KoTTkLXKrwlLPV</td>\n",
+              "      <td>0.901</td>\n",
               "      <td>8</td>\n",
-              "      <td>-7.230</td>\n",
+              "      <td>0.0763</td>\n",
+              "      <td>-28.454</td>\n",
               "      <td>1</td>\n",
-              "      <td>0.0794</td>\n",
-              "      <td>0.4010</td>\n",
-              "      <td>0.000000</td>\n",
-              "      <td>0.1180</td>\n",
-              "      <td>0.1240</td>\n",
-              "      <td>115.080</td>\n",
-              "      <td>audio_features</td>\n",
-              "      <td>7pgJBLVz5VmnL7uGHmRj6p</td>\n",
-              "      <td>spotify:track:7pgJBLVz5VmnL7uGHmRj6p</td>\n",
-              "      <td>https://api.spotify.com/v1/tracks/7pgJBLVz5Vmn...</td>\n",
-              "      <td>https://api.spotify.com/v1/audio-analysis/7pgJ...</td>\n",
-              "      <td>224427</td>\n",
-              "      <td>4</td>\n",
-              "      <td>Dark Trap</td>\n",
-              "      <td>Pathology</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>Fantasiestücke, Op. 111: Più tosto lento</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1928</td>\n",
+              "      <td>0.0462</td>\n",
+              "      <td>83.972</td>\n",
+              "      <td>0.0767</td>\n",
+              "      <td>1928</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>2</th>\n",
-              "      <td>0.850</td>\n",
-              "      <td>0.893</td>\n",
+              "      <td>0.604</td>\n",
+              "      <td>['Seweryn Goszczyński']</td>\n",
+              "      <td>0.749</td>\n",
+              "      <td>104300</td>\n",
+              "      <td>0.2200</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6L63VW0PibdM1HDSBoqnoM</td>\n",
+              "      <td>0.000</td>\n",
               "      <td>5</td>\n",
-              "      <td>-4.783</td>\n",
-              "      <td>1</td>\n",
-              "      <td>0.0623</td>\n",
-              "      <td>0.0138</td>\n",
-              "      <td>0.000004</td>\n",
-              "      <td>0.3720</td>\n",
-              "      <td>0.0391</td>\n",
-              "      <td>218.050</td>\n",
-              "      <td>audio_features</td>\n",
-              "      <td>0vSWgAlfpye0WCGeNmuNhy</td>\n",
-              "      <td>spotify:track:0vSWgAlfpye0WCGeNmuNhy</td>\n",
-              "      <td>https://api.spotify.com/v1/tracks/0vSWgAlfpye0...</td>\n",
-              "      <td>https://api.spotify.com/v1/audio-analysis/0vSW...</td>\n",
-              "      <td>98821</td>\n",
-              "      <td>4</td>\n",
-              "      <td>Dark Trap</td>\n",
-              "      <td>Symbiote</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>0.1190</td>\n",
+              "      <td>-19.924</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Chapter 1.18 - Zamek kaniowski</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1928</td>\n",
+              "      <td>0.9290</td>\n",
+              "      <td>107.177</td>\n",
+              "      <td>0.8800</td>\n",
+              "      <td>1928</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>3</th>\n",
-              "      <td>0.476</td>\n",
+              "      <td>0.995</td>\n",
+              "      <td>['Francisco Canaro']</td>\n",
               "      <td>0.781</td>\n",
+              "      <td>180760</td>\n",
+              "      <td>0.1300</td>\n",
               "      <td>0</td>\n",
-              "      <td>-4.710</td>\n",
+              "      <td>6M94FkXd15sOAOQYRnWPN8</td>\n",
+              "      <td>0.887</td>\n",
               "      <td>1</td>\n",
-              "      <td>0.1030</td>\n",
-              "      <td>0.0237</td>\n",
-              "      <td>0.000000</td>\n",
-              "      <td>0.1140</td>\n",
-              "      <td>0.1750</td>\n",
-              "      <td>186.948</td>\n",
-              "      <td>audio_features</td>\n",
-              "      <td>0VSXnJqQkwuH2ei1nOQ1nu</td>\n",
-              "      <td>spotify:track:0VSXnJqQkwuH2ei1nOQ1nu</td>\n",
-              "      <td>https://api.spotify.com/v1/tracks/0VSXnJqQkwuH...</td>\n",
-              "      <td>https://api.spotify.com/v1/audio-analysis/0VSX...</td>\n",
-              "      <td>123661</td>\n",
-              "      <td>3</td>\n",
-              "      <td>Dark Trap</td>\n",
-              "      <td>ProductOfDrugs (Prod. The Virus and Antidote)</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>0.1110</td>\n",
+              "      <td>-14.734</td>\n",
+              "      <td>0</td>\n",
+              "      <td>Bebamos Juntos - Instrumental (Remasterizado)</td>\n",
+              "      <td>0</td>\n",
+              "      <td>1928-09-25</td>\n",
+              "      <td>0.0926</td>\n",
+              "      <td>108.003</td>\n",
+              "      <td>0.7200</td>\n",
+              "      <td>1928</td>\n",
               "    </tr>\n",
               "    <tr>\n",
               "      <th>4</th>\n",
-              "      <td>0.798</td>\n",
-              "      <td>0.624</td>\n",
-              "      <td>2</td>\n",
-              "      <td>-7.668</td>\n",
+              "      <td>0.990</td>\n",
+              "      <td>['Frédéric Chopin', 'Vladimir Horowitz']</td>\n",
+              "      <td>0.210</td>\n",
+              "      <td>687733</td>\n",
+              "      <td>0.2040</td>\n",
+              "      <td>0</td>\n",
+              "      <td>6N6tiFZ9vLTSOIxkj8qKrd</td>\n",
+              "      <td>0.908</td>\n",
+              "      <td>11</td>\n",
+              "      <td>0.0980</td>\n",
+              "      <td>-16.829</td>\n",
               "      <td>1</td>\n",
-              "      <td>0.2930</td>\n",
-              "      <td>0.2170</td>\n",
-              "      <td>0.000000</td>\n",
-              "      <td>0.1660</td>\n",
-              "      <td>0.5910</td>\n",
-              "      <td>147.988</td>\n",
-              "      <td>audio_features</td>\n",
-              "      <td>4jCeguq9rMTlbMmPHuO7S3</td>\n",
-              "      <td>spotify:track:4jCeguq9rMTlbMmPHuO7S3</td>\n",
-              "      <td>https://api.spotify.com/v1/tracks/4jCeguq9rMTl...</td>\n",
-              "      <td>https://api.spotify.com/v1/audio-analysis/4jCe...</td>\n",
-              "      <td>123298</td>\n",
-              "      <td>4</td>\n",
-              "      <td>Dark Trap</td>\n",
-              "      <td>Venom</td>\n",
-              "      <td>NaN</td>\n",
-              "      <td>NaN</td>\n",
+              "      <td>Polonaise-Fantaisie in A-Flat Major, Op. 61</td>\n",
+              "      <td>1</td>\n",
+              "      <td>1928</td>\n",
+              "      <td>0.0424</td>\n",
+              "      <td>62.149</td>\n",
+              "      <td>0.0693</td>\n",
+              "      <td>1928</td>\n",
               "    </tr>\n",
               "  </tbody>\n",
               "</table>\n",
               "</div>"
             ],
             "text/plain": [
-              "   danceability  energy  key  loudness  mode  speechiness  acousticness   \n",
-              "0         0.831   0.814    2    -7.364     1       0.4200        0.0598  \\\n",
-              "1         0.719   0.493    8    -7.230     1       0.0794        0.4010   \n",
-              "2         0.850   0.893    5    -4.783     1       0.0623        0.0138   \n",
-              "3         0.476   0.781    0    -4.710     1       0.1030        0.0237   \n",
-              "4         0.798   0.624    2    -7.668     1       0.2930        0.2170   \n",
+              "   acousticness                                   artists  danceability   \n",
+              "0         0.995                       ['Carl Woitschach']         0.708  \\\n",
+              "1         0.994  ['Robert Schumann', 'Vladimir Horowitz']         0.379   \n",
+              "2         0.604                   ['Seweryn Goszczyński']         0.749   \n",
+              "3         0.995                      ['Francisco Canaro']         0.781   \n",
+              "4         0.990  ['Frédéric Chopin', 'Vladimir Horowitz']         0.210   \n",
               "\n",
-              "   instrumentalness  liveness  valence    tempo            type   \n",
-              "0          0.013400    0.0556   0.3890  156.985  audio_features  \\\n",
-              "1          0.000000    0.1180   0.1240  115.080  audio_features   \n",
-              "2          0.000004    0.3720   0.0391  218.050  audio_features   \n",
-              "3          0.000000    0.1140   0.1750  186.948  audio_features   \n",
-              "4          0.000000    0.1660   0.5910  147.988  audio_features   \n",
+              "   duration_ms  energy  explicit                      id  instrumentalness   \n",
+              "0       158648  0.1950         0  6KbQ3uYMLKb5jDxLF7wYDD             0.563  \\\n",
+              "1       282133  0.0135         0  6KuQTIu1KoTTkLXKrwlLPV             0.901   \n",
+              "2       104300  0.2200         0  6L63VW0PibdM1HDSBoqnoM             0.000   \n",
+              "3       180760  0.1300         0  6M94FkXd15sOAOQYRnWPN8             0.887   \n",
+              "4       687733  0.2040         0  6N6tiFZ9vLTSOIxkj8qKrd             0.908   \n",
               "\n",
-              "                       id                                   uri   \n",
-              "0  2Vc6NJ9PW9gD9q343XFRKx  spotify:track:2Vc6NJ9PW9gD9q343XFRKx  \\\n",
-              "1  7pgJBLVz5VmnL7uGHmRj6p  spotify:track:7pgJBLVz5VmnL7uGHmRj6p   \n",
-              "2  0vSWgAlfpye0WCGeNmuNhy  spotify:track:0vSWgAlfpye0WCGeNmuNhy   \n",
-              "3  0VSXnJqQkwuH2ei1nOQ1nu  spotify:track:0VSXnJqQkwuH2ei1nOQ1nu   \n",
-              "4  4jCeguq9rMTlbMmPHuO7S3  spotify:track:4jCeguq9rMTlbMmPHuO7S3   \n",
+              "   key  liveness  loudness  mode   \n",
+              "0   10    0.1510   -12.428     1  \\\n",
+              "1    8    0.0763   -28.454     1   \n",
+              "2    5    0.1190   -19.924     0   \n",
+              "3    1    0.1110   -14.734     0   \n",
+              "4   11    0.0980   -16.829     1   \n",
               "\n",
-              "                                          track_href   \n",
-              "0  https://api.spotify.com/v1/tracks/2Vc6NJ9PW9gD...  \\\n",
-              "1  https://api.spotify.com/v1/tracks/7pgJBLVz5Vmn...   \n",
-              "2  https://api.spotify.com/v1/tracks/0vSWgAlfpye0...   \n",
-              "3  https://api.spotify.com/v1/tracks/0VSXnJqQkwuH...   \n",
-              "4  https://api.spotify.com/v1/tracks/4jCeguq9rMTl...   \n",
+              "                                            name  popularity release_date   \n",
+              "0                    Singende Bataillone 1. Teil           0         1928  \\\n",
+              "1       Fantasiestücke, Op. 111: Più tosto lento           0         1928   \n",
+              "2                 Chapter 1.18 - Zamek kaniowski           0         1928   \n",
+              "3  Bebamos Juntos - Instrumental (Remasterizado)           0   1928-09-25   \n",
+              "4    Polonaise-Fantaisie in A-Flat Major, Op. 61           1         1928   \n",
               "\n",
-              "                                        analysis_url  duration_ms   \n",
-              "0  https://api.spotify.com/v1/audio-analysis/2Vc6...       124539  \\\n",
-              "1  https://api.spotify.com/v1/audio-analysis/7pgJ...       224427   \n",
-              "2  https://api.spotify.com/v1/audio-analysis/0vSW...        98821   \n",
-              "3  https://api.spotify.com/v1/audio-analysis/0VSX...       123661   \n",
-              "4  https://api.spotify.com/v1/audio-analysis/4jCe...       123298   \n",
-              "\n",
-              "   time_signature      genre                                      song_name   \n",
-              "0               4  Dark Trap                            Mercury: Retrograde  \\\n",
-              "1               4  Dark Trap                                      Pathology   \n",
-              "2               4  Dark Trap                                       Symbiote   \n",
-              "3               3  Dark Trap  ProductOfDrugs (Prod. The Virus and Antidote)   \n",
-              "4               4  Dark Trap                                          Venom   \n",
-              "\n",
-              "   Unnamed: 0 title  \n",
-              "0         NaN   NaN  \n",
-              "1         NaN   NaN  \n",
-              "2         NaN   NaN  \n",
-              "3         NaN   NaN  \n",
-              "4         NaN   NaN  "
+              "   speechiness    tempo  valence  year  \n",
+              "0       0.0506  118.469   0.7790  1928  \n",
+              "1       0.0462   83.972   0.0767  1928  \n",
+              "2       0.9290  107.177   0.8800  1928  \n",
+              "3       0.0926  108.003   0.7200  1928  \n",
+              "4       0.0424   62.149   0.0693  1928  "
             ]
           },
-          "execution_count": 10,
+          "execution_count": 12,
           "metadata": {},
           "output_type": "execute_result"
         }
